Novas funcionalidades, cadastrar produtos, serviços, motivos de isenção e categoria.
